internal/xds/translator/testdata/out/xds-ir-sublinear/ratelimit-both-type.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            example:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: example
                  name: second-route
                  route:
                    cluster: second-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: second-route
                          descriptorValue: second-route
                      - requestHeaders:
                          descriptorKey: rule-0-match-0
                          headerName: x-user-id
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.local_ratelimit:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      alwaysConsumeDefaultTokenBucket: false
                      descriptors:
                      - entries:
                        - key: rule-0-match-0
                          value: rule-0-match-0
                        tokenBucket:
                          fillInterval: 3600s
                          maxTokens: 10
                          tokensPerFill: 10
                      enableXRatelimitHeaders: DRAFT_VERSION_03
                      filterEnabled:
                        defaultValue:
                          numerator: 100
                      filterEnforced:
                        defaultValue:
                          numerator: 100
                      rateLimits:
                      - actions:
                        - headerValueMatch:
                            descriptorKey: rule-0-match-0
                            descriptorValue: rule-0-match-0
                            expectMatch: true
                            headers:
                            - name: x-user-id
                              stringMatch:
                                exact: one
                      statPrefix: http_local_rate_limiter
                      tokenBucket:
                        fillInterval: 60s
                        maxTokens: 10
                        tokensPerFill: 10
            foo/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/bar
                  name: first-route
                  route:
                    cluster: first-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: first-route
                          descriptorValue: first-route
                      - headerValueMatch:
                          descriptorKey: rule-0-match-0
                          descriptorValue: rule-0-match-0
                          expectMatch: true
                          headers:
                          - name: x-user-id
                            stringMatch:
                              exact: one
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
